    + Add --disable-jit back on mipsel, armel and powerpc. The change was
      probably lost with the webkit2 addition.
    + Don't pass --with-gstreamer=1.0 anymore, GStreamer support is always
      1.0 now and the configure flag has been dropped.
    + Don't pass --disable-plugin-process. The flag is gone and the plugin
      process is always built for WebKit2, which is what we were doing.
  * debian/control:
    + Build depend on libgudev-1.0-dev on linux for gamepad support.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 06 Jun 2013 10:26:19 +0200

webkitgtk (2.0.2-2) experimental; urgency=low

  * Team upload.

  * debian/control,
    debian/rules:
    + Build depend on gcc-4.7 and g++-4.7 and set the C compiler and C++
      compiler to this version as webkitgtk now requires GCC >= 4.7 and
      the default on many architectures is still 4.6.
  * debian/control,
    debian/compat:
    + Bump debhelper compat to 9. Among other things, this brings us
      compressed debug info files. It also brings build-id debug info
      files which greatly speed up gdb start up as gdb won't have to
      checksum the (rather big) webkit debug info files anymore.
  * debian/rules:
    + Exclude libwebkit2gtkinjectedbundle.so from dh_makeshlibs as it's a
      private library and debhelper looks at every shared lib in compat 9.
  * debian/libwebkitgtk-1.0-0.symbols,
    debian/libwebkitgtk-3.0-0.symbols:
    + Add missing symbols for 32 bit arches. Closes: #704886.
  * debian/libwebkit2gtk-3.0-25.symbols:
    + Demangle symbols.
  * debian/control:
    + Bump required build dependencies according to Versions.mk.
    + Add missing build dependency on flex. Thanks to Sjoerd Simons for
      noticing this.
    + Also add other missing build dependencies (cairo, freetype,
      fontconfig and libxml).

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 04 Jun 2013 15:00:49 +0200

webkitgtk (2.0.2-1) experimental; urgency=low

  * Team upload.

  * New upstream release.