@@ -54,8 +54,13 @@ ifneq (,$(findstring $(DEB_BUILD_ARCH),ia64 mips mipsel s390 s390x hurd-i386))
 endif
 
 # disable jit on some architectures (bug #651636)
-ifneq (,$(findstring $(DEB_BUILD_ARCH),armel mipsel powerpc))
+ifneq (,$(findstring $(DEB_BUILD_ARCH),armel mipsel))
 	COMMON_CONFIGURE_ARGUMENTS += --disable-jit
+endif
+
+# See https://bugs.webkit.org/show_bug.cgi?id=113638
+ifneq (,$(findstring $(DEB_BUILD_ARCH),ia64 powerpc sparc s390 s390x))
+JSC_CPPFLAGS = -DENABLE_JIT=0 -DENABLE_YARR_JIT=0 -DENABLE_ASSEMBLER=0
 endif
 
 ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
@@ -96,6 +101,7 @@ ifeq (2.0,$(filter 2.0,$(GTK_VERSIONS)))
 	CXXFLAGS="$(CFLAGS)" \
 	CPPFLAGS="$(CPPFLAGS)" \
 	LDFLAGS="$(LDFLAGS)" \
+	JSC_CPPFLAGS="$(JSC_CPPFLAGS)" \
 	CC="gcc-4.7" \
 	CXX="g++-4.7" \
 	../configure --prefix=/usr \
@@ -112,6 +118,7 @@ ifeq (3.0,$(filter 3.0,$(GTK_VERSIONS)))
 	CXXFLAGS="$(CFLAGS)" \
 	CPPFLAGS="$(CPPFLAGS)" \
 	LDFLAGS="$(LDFLAGS)" \
+	JSC_CPPFLAGS="$(JSC_CPPFLAGS)" \
 	CC="gcc-4.7" \
 	CXX="g++-4.7" \
 	../configure --prefix=/usr \
