@@ -13,6 +13,9 @@ webkitgtk (2.0.2-3) UNRELEASED; urgency=low
       1.0 now and the configure flag has been dropped.
     + Don't pass --disable-plugin-process. The flag is gone and the plugin
       process is always built for WebKit2, which is what we were doing.
+    + Don't pass --disable-jit on powerpc. Instead disable JIT, YARR and
+      assembler in ia64 powerpc sparc s390 and s390x as there's no
+      support for MacroAssembler for them.
   * debian/control:
     + Build depend on libgudev-1.0-dev on linux for gamepad support.
 
